--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Connexion / Inscription - Kylita</title>
+  <title>Connexion / Inscription - EverFrost</title>
   <style>
     :root{--bg:#0f1724;--card:#111827;--accent:#06b6d4;--muted:#9ca3af;color-scheme:dark}
     *{box-sizing:border-box}
@@ -39,7 +39,7 @@
 <body>
   <div class="wrap" role="main">
     <div class="hero">
-      <h1>KEverFrost</h1>
+      <h1>EverFrost</h1>
       <p>Crée un compte ou connecte-toi.</p>
       <div class="features">
         <div class="feat">Sécurisé (hein kenzo???)</div>
@@ -92,7 +92,7 @@
         </div>
       </form>
 
-      <footer>© Kylita — <span id="ver">v1.0</span></footer>
+      <footer>© EverFrost — <span id="ver">v1.0</span></footer>
     </div>
   </div>
 
@@ -105,14 +105,14 @@
     // Your Firebase configuration (provided)
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
-  authDomain: "kylita-f2923.firebaseapp.com",
-  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
-  projectId: "kylita-f2923",
-  storageBucket: "kylita-f2923.firebasestorage.app",
-  messagingSenderId: "431823530994",
-  appId: "1:431823530994:web:88a07e633751686e5ad96b",
-  measurementId: "G-F4LLNWQJ16"
+  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+  authDomain: "message-957c6.firebaseapp.com",
+  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "message-957c6",
+  storageBucket: "message-957c6.firebasestorage.app",
+  messagingSenderId: "518720941529",
+  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+  measurementId: "G-GW0GKGQ9EP"
 };
 
     // Initialize Firebase
