--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <h1>EverFrost</h1>
       <p>Crée un compte ou connecte-toi.</p>
       <div class="features">
-        <div class="feat">Sécurisé (hein kenzo???)</div>
+        <div class="feat">Sécurisé [Merci Kyky]</div>
         <div class="feat">Actif</div>
-        <div class="feat">--------</div>
-        <div class="feat">-*------</div>
+        <div class="feat">Rapide</div>
+        <div class="feat">Accessible</div>
       </div>
       <div style="margin-top:auto;color:var(--muted);font-size:13px">Des suggestions? https://discord.gg/kMrbV584P6</div>
     </div>
