--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@
     <h2>Mes serveurs Minecraft</h2>
     <form id="addServerForm">
       <input type="text" id="serverName" placeholder="Nom du serveur" required />
-      <input type="text" id="serverAddress" placeholder="Adresse IP ou URL" required />
+      <input type="text" id="serverAddress" placeholder="Adresse IP" required />
       <button type="submit">Ajouter serveur</button>
     </form>
     <ul id="serversList"></ul>
