--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
           displayName: username,
           email: email,
           createdAt: now,
-          diamants: 20,   // Attribue 20 diamants
-          role: 'Membres' // Attribue le rôle Membres
+          diamants: 20,
+          role: Membres,
         });
         showMessage('Inscription réussie — redirection en cours...', 'ok');
         setTimeout(() => { window.location.href = 'home.html'; }, 900);
