--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>EverFrost - Home</title>
+<title>EverFrost - Homea</title>
 <style>
   /* Style global + barre nav */
   body {
