--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1>EverFrost</h1>
       <p>Crée un compte ou connecte-toi.</p>
       <div class="features">
-        <div class="feat">Sécurisé [Merci Kyky]</div>
+        <div class="feat">Sécurisé [Merci Kylita]</div>
         <div class="feat">Actif</div>
         <div class="feat">Rapide</div>
         <div class="feat">Accessible</div>
