--- a/home.html
+++ b/home.html
@@ -162,7 +162,7 @@ main {
   <div class="container">
     <header>
       <h1>Chat</h1>
-      <div class="user">Connecté en tant que <strong id="usernameDisplay">...</strong></div>
+      <div class="user">Connecté en tant que <strong id="displayName">...</strong></div>
     </header>
 
     <main>
@@ -182,14 +182,14 @@ main {
 <script>
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
-  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
-  authDomain: "kylita-f2923.firebaseapp.com",
-  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
-  projectId: "kylita-f2923",
-  storageBucket: "kylita-f2923.firebasestorage.app",
-  messagingSenderId: "431823530994",
-  appId: "1:431823530994:web:88a07e633751686e5ad96b",
-  measurementId: "G-F4LLNWQJ16"
+  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+  authDomain: "message-957c6.firebaseapp.com",
+  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "message-957c6",
+  storageBucket: "message-957c6.firebasestorage.app",
+  messagingSenderId: "518720941529",
+  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+  measurementId: "G-GW0GKGQ9EP"
 };
 
 firebase.initializeApp(firebaseConfig);
@@ -197,7 +197,7 @@ const auth = firebase.auth();
 const db = firebase.database();
 
 let username = null;
-const usernameDisplay = document.getElementById("usernameDisplay");
+const displayName = document.getElementById("displayName");
 const messagesEl = document.getElementById("messages");
 const input = document.getElementById("messageInput");
 const sendBtn = document.getElementById("sendBtn");
