--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Connexion / Inscription - EverFrost</title>
+  <title>Connexion / Inscription - Kylita</title>
   <style>
     :root{--bg:#0f1724;--card:#111827;--accent:#06b6d4;--muted:#9ca3af;color-scheme:dark}
     *{box-sizing:border-box}
@@ -39,13 +39,13 @@
 <body>
   <div class="wrap" role="main">
     <div class="hero">
-      <h1>EverFrost</h1>
+      <h1>KEverFrost</h1>
       <p>Crée un compte ou connecte-toi.</p>
       <div class="features">
-        <div class="feat">Sécurisé [Merci Kylita]</div>
+        <div class="feat">Sécurisé (hein kenzo???)</div>
         <div class="feat">Actif</div>
-        <div class="feat">Rapide</div>
-        <div class="feat">Accessible</div>
+        <div class="feat">--------</div>
+        <div class="feat">-*------</div>
       </div>
       <div style="margin-top:auto;color:var(--muted);font-size:13px">Des suggestions? https://discord.gg/kMrbV584P6</div>
     </div>
@@ -92,7 +92,7 @@
         </div>
       </form>
 
-      <footer>© EverFrost — <span id="ver">v1.0</span></footer>
+      <footer>© Kylita — <span id="ver">v1.0</span></footer>
     </div>
   </div>
 
@@ -102,24 +102,25 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
   <script>
-    // Configuration Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
-      authDomain: "message-957c6.firebaseapp.com",
-      databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "message-957c6",
-      storageBucket: "message-957c6.firebasestorage.app",
-      messagingSenderId: "518720941529",
-      appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
-      measurementId: "G-GW0GKGQ9EP"
-    };
+    // Your Firebase configuration (provided)
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
+  authDomain: "kylita-f2923.firebaseapp.com",
+  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
+  projectId: "kylita-f2923",
+  storageBucket: "kylita-f2923.firebasestorage.app",
+  messagingSenderId: "431823530994",
+  appId: "1:431823530994:web:88a07e633751686e5ad96b",
+  measurementId: "G-F4LLNWQJ16"
+};
 
-    // Initialise Firebase
+    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.database();
 
-    // Elements UI
+    // UI elements
     const tabLogin = document.getElementById('tab-login');
     const tabRegister = document.getElementById('tab-register');
     const loginForm = document.getElementById('login-form');
@@ -131,71 +132,91 @@
       setTimeout(()=>{ if(messages.firstChild) messages.firstChild.remove() }, 6000);
     }
 
-    // Gestion onglets
-    tabLogin.addEventListener('click', ()=> {
-      tabLogin.classList.add('active');
-      tabRegister.classList.remove('active');
-      loginForm.style.display = '';
-      registerForm.style.display = 'none';
+    // Tabs
+    tabLogin.addEventListener('click', ()=>{
+      tabLogin.classList.add('active'); tabRegister.classList.remove('active');
+      loginForm.style.display = ''; registerForm.style.display = 'none';
     });
-    tabRegister.addEventListener('click', ()=> {
-      tabRegister.classList.add('active');
-      tabLogin.classList.remove('active');
-      registerForm.style.display = '';
-      loginForm.style.display = 'none';
+    tabRegister.addEventListener('click', ()=>{
+      tabRegister.classList.add('active'); tabLogin.classList.remove('active');
+      registerForm.style.display = ''; loginForm.style.display = 'none';
     });
     document.getElementById('to-register').addEventListener('click', ()=> tabRegister.click());
     document.getElementById('to-login').addEventListener('click', ()=> tabLogin.click());
 
-    // Inscription
-    registerForm.addEventListener('submit', async (e) => {
+    // Register
+    registerForm.addEventListener('submit', async (e)=>{
       e.preventDefault();
       const username = document.getElementById('reg-username').value.trim();
       const email = document.getElementById('reg-email').value.trim();
       const pass = document.getElementById('reg-password').value;
       const pass2 = document.getElementById('reg-password2').value;
 
-      if (!username || username.length < 2) return showMessage('Le pseudo doit contenir au moins 2 caractères.');
-      if (pass.length < 6) return showMessage('Le mot de passe doit contenir au moins 6 caractères.');
-      if (pass !== pass2) return showMessage('Les mots de passe ne correspondent pas.');
+      if(!username || username.length < 2) return showMessage('Le pseudo doit contenir au moins 2 caractères.');
+      if(pass.length < 6) return showMessage('Le mot de passe doit contenir au moins 6 caractères.');
+      if(pass !== pass2) return showMessage('Les mots de passe ne correspondent pas.');
 
-      try {
+      try{
         const userCredential = await auth.createUserWithEmailAndPassword(email, pass);
         const user = userCredential.user;
-        // Mise à jour du pseudo
-        await user.updateProfile({ displayName: username });
-        // Enregistrement dans la base de données
+        // Update display name
+        await user.updateProfile({displayName: username});
+        // Save profile in Realtime Database under /users/{uid}
         const now = Date.now();
         await db.ref('users/' + user.uid).set({
           displayName: username,
           email: email,
-          createdAt: now,
-          diamants: 20,   // Attribue 20 diamants
-          role: 'Membres' // Attribue le rôle Membres
+          createdAt: now
         });
         showMessage('Inscription réussie — redirection en cours...', 'ok');
-        setTimeout(() => { window.location.href = 'home.html'; }, 900);
-      } catch (err) {
+        // Redirect to your app home (customize)
+        setTimeout(()=>{ window.location.href = 'home.html'; }, 900);
+      }catch(err){
         console.error(err);
         showMessage(err.message || 'Erreur lors de la création de compte.');
       }
     });
 
-    // Connexion
-    loginForm.addEventListener('submit', async (e) => {
+    // Login
+    loginForm.addEventListener('submit', async (e)=>{
       e.preventDefault();
       const email = document.getElementById('login-email').value.trim();
       const pass = document.getElementById('login-password').value;
-
-      try {
+      try{
         await auth.signInWithEmailAndPassword(email, pass);
-        showMessage('Connexion réussie — redirection en cours...', 'ok');
-        setTimeout(() => { window.location.href = 'home.html'; }, 900);
-      } catch (err) {
+        showMessage('Connexion réussie — redirection...', 'ok');
+        setTimeout(()=>{ window.location.href = 'home.html'; }, 700);
+      }catch(err){
         console.error(err);
-        showMessage(err.message || 'Erreur lors de la connexion.');
+        showMessage('Impossible de se connecter : ' + (err.message || 'Erreur'));
       }
     });
+
+    // Listen to auth state (optional)
+    auth.onAuthStateChanged(user => {
+      if(user){
+        console.log('Utilisateur connecté:', user.uid, user.email);
+        // If you want to auto redirect logged-in users to home, uncomment:
+        // if(location.pathname.includes('login')) window.location.href = 'home.html';
+      } else {
+        console.log('Aucun utilisateur connecté');
+      }
+    });
+
+    // Optional: simple password reset flow (by email)
+    function addResetLink(){
+      const resetBtn = document.createElement('button');
+      resetBtn.className = 'btn ghost'; resetBtn.type='button'; resetBtn.textContent='Mot de passe oublié ?';
+      resetBtn.addEventListener('click', ()=>{
+        const email = prompt('Entrez votre adresse e‑mail pour recevoir un lien de réinitialisation :');
+        if(!email) return;
+        auth.sendPasswordResetEmail(email).then(()=> showMessage('E‑mail de réinitialisation envoyé.', 'ok')).catch(e=> showMessage(e.message || 'Erreur'));
+      });
+      // append to login form
+      loginForm.appendChild(resetBtn);
+    }
+    addResetLink();
+
   </script>
 </body>
 </html>
