--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Connexion / Inscription - Kylita</title>
+  <title>Connexion / Inscription - Everfrost</title>
   <style>
     :root{--bg:#0f1724;--card:#111827;--accent:#06b6d4;--muted:#9ca3af;color-scheme:dark}
     *{box-sizing:border-box}
